--- a/src/app/home/bookings/edit-booking/edit-booking.page.html
+++ b/src/app/home/bookings/edit-booking/edit-booking.page.html
@@ -1,8 +1,6 @@
-<ion-content>
-
+<ion-content scrollY="false">
   <ion-header collapse="fade" [translucent]="true">
   </ion-header>
-
   <ion-list *ngIf="booking">
     <ion-list-header>
       <ion-label>Your Reservation</ion-label>
