--- a/src/app/home/bookings/small-slot/small-slot.component.html
+++ b/src/app/home/bookings/small-slot/small-slot.component.html
@@ -1,5 +1,5 @@
 <ion-item *ngIf="!loading" button  (click)="click()">
-  <ion-icon  slot="start" name="calendar-outline" color="danger"></ion-icon>
+  <ion-icon  slot="start" name="calendar-outline" color="success"></ion-icon>
   <ion-label>
     <h3>{{slot.date | date}}</h3>
     <p>Desk: {{slot.desk}}</p>
