--- a/src/app/home/book/book.page.scss
+++ b/src/app/home/book/book.page.scss
@@ -1,22 +1,23 @@
-ion-datetime {
-    height: auto;
-  width: auto;
-  max-width: 350px;
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
-  grid-gap: 0 10px;
-}
-
 ion-modal {
   --width: 290px;
-  --height: 382px;
+  --height:382px;
   --border-radius: 8px;
+}
+ion-datetime {
+  height: auto;
+  width: auto;
+  max-width: 350px;
+  border-radius: 8px;
 }
 ion-modal ion-datetime {
   height: 382px;
+  --border-radius: 10px;
+}
+.show{
+  animation: showConfirm 1s forwards;
+}
+.hide{
+  animation: hide 1s forwards;
 }
 .form-item{
   animation: show .5s forwards;
@@ -57,5 +58,22 @@ ion-modal ion-datetime {
   }
   to{
     opacity: 1;
+  }
+}
+@keyframes hide{
+  from {
+    opacity: 1;
+  }
+  to{
+    opacity: 0;
+  }
+}
+
+@keyframes slide-in-on{
+  from{
+    opacity: .2;
+  }
+  to{
+    opacity: .7;
   }
 }
