--- a/src/app/auth/signup/signup.page.scss
+++ b/src/app/auth/signup/signup.page.scss
@@ -2,7 +2,11 @@
     height: 100%;
     
 }
+ion-toolbar{
+    --background: transparent;
 
+    --ion-color-base: transparent !important;
+}
 ion-button{
     width: fit-content;
 }
