--- a/src/app/home/book/book.page.html
+++ b/src/app/home/book/book.page.html
@@ -20,7 +20,7 @@
     <ion-item *ngIf="!offices" lines="none">
       <ion-skeleton-text animated style="width: 100%; height: 35px;"></ion-skeleton-text>
     </ion-item>
-    <div class="date-container" *ngIf="!this.form.controls.site.valid">
+    <div class="date-container" *ngIf="this.form.controls.site.valid">
       <ion-item class="form-item" (click)="itemTap()">
         <ion-button fill="clear" id="date">
           <ion-label>{{ (this.form.controls.date.value | date) || "Date" }}</ion-label>
@@ -40,7 +40,7 @@
     <ion-button [disabled]="!this.form.valid" class="ion-padding" (click)="onSubmit()" expand="block">
       Book
     </ion-button>
-    <ion-modal  #ionModal trigger="date">
+    <ion-modal #ionModal trigger="date" *ngIf="this.form.controls.site.valid">
       <ng-template>
         <ion-datetime [ngClass]="[showClass]" ion-datetime [isDateEnabled]="dateEnabled"
           formControlName="date" #dateTime presentation="date" showDefaultButtons=true [min]="minDate"
