--- a/src/app/home/bookings/big-slot/big-slot.component.scss
+++ b/src/app/home/bookings/big-slot/big-slot.component.scss
@@ -1,7 +1,12 @@
 .card{
     animation: show 1s forwards;
 }   
-
+ion-card-subtitle{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    column-gap: 10px;
+}
 @keyframes show{
     from {
         opacity: 0;
