--- a/src/app/home/bookings/small-slot/small-slot.component.html
+++ b/src/app/home/bookings/small-slot/small-slot.component.html
@@ -2,6 +2,6 @@
   <ion-icon  slot="start" name="calendar-outline" color="success"></ion-icon>
   <ion-label>
     <h3>{{slot.date | date}}</h3>
-    <p>Desk: {{slot.desk}}</p>
+    <p>Where: {{slot.site}}</p>
   </ion-label>
 </ion-item>
