--- a/src/app/home/bookings/bookings-list/bookings-list.page.scss
+++ b/src/app/home/bookings/bookings-list/bookings-list.page.scss
@@ -1,9 +1,7 @@
-ion-toolbar, ion-header, ion-title, ion-item-option{
-    // 
-}
-ion-item-option{
-    background: transparent ;
-    border-left: 1px solid rgba($color: #ccc, $alpha: .3);
+ion-toolbar{
+   --background: transparent;
+
+   --ion-color-base: transparent !important;
 }
 .popup{
  ion-list-header{
