--- a/src/app/home/bookings/edit-booking/edit-booking.page.html
+++ b/src/app/home/bookings/edit-booking/edit-booking.page.html
@@ -1,15 +1,17 @@
 <ion-content scrollY="false">
-  <ion-header collapse="fade" [translucent]="true">
-  </ion-header>
-  <ion-list *ngIf="booking">
+  <ion-list *ngIf="booking && !loading">
     <ion-list-header>
       <ion-label>Your Reservation</ion-label>
     </ion-list-header>
     <ion-item-divider>
     </ion-item-divider>
-    <ion-item fill="outline">
+    <ion-item >
       <ion-icon slot="start" name="calendar-outline"></ion-icon>
       <ion-label>{{booking?.date | date}}</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-icon slot="start" name="location-outline"></ion-icon>
+      <ion-label>Site: {{booking?.site}}</ion-label>
     </ion-item>
     <ion-item lines="none">
       <ion-icon slot="start" name="desktop-outline"></ion-icon>
