--- a/src/app/home/bookings/edit-skeleton/edit-skeleton.component.html
+++ b/src/app/home/bookings/edit-skeleton/edit-skeleton.component.html
@@ -4,7 +4,13 @@
         <ion-skeleton-text animated style="width:60%;height:30px;border-radius: 3px;"></ion-skeleton-text>
       </ion-label>
     </ion-list-header>
-    <ion-item fill="outline">
+    <ion-item>
+      <ion-thumbnail slot="start">
+        <ion-skeleton-text animated style="border-radius: 50%;"></ion-skeleton-text>
+      </ion-thumbnail>
+      <ion-skeleton-text style="width:60%; height:20px"></ion-skeleton-text>
+    </ion-item>
+    <ion-item>
       <ion-thumbnail slot="start">
         <ion-skeleton-text animated style="border-radius: 50%;"></ion-skeleton-text>
       </ion-thumbnail>
