--- a/src/app/home/map/map.page.scss
+++ b/src/app/home/map/map.page.scss
@@ -5,7 +5,8 @@ capacitor-google-map {
 }
 ion-item,
 ion-button,
-ion-list {
+ion-list,
+ion-list-header {
     --background: var(--ion-background-color);
 }
 ion-card {
