--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -6,77 +6,33 @@
 
 <ion-content fullscreen class="ion-padding">
   <form [formGroup]="form">
-    <ion-grid>
-      <ion-row>
-        <ion-col size="12">
-          <ion-img src="../../../assets/icon/login-icon.svg"></ion-img>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col size="12">
-          <ion-item lines="none">
-            <ion-text >
-              <h3 style="font-weight: 700;">LOGIN</h3>
-            </ion-text>
-          </ion-item>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col size="12">
-          <ion-item class="input" lines="none">
-          <!-- <ion-label position="floating">E-Mail</ion-label> -->
-          <ion-input formControlName="email" placeholder="E-Mail" type="email" name="email"></ion-input>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-      <ion-row>
-        <ion-col size="12">
-          <ion-item class="input" lines="none">
-          <!-- <ion-label position="floating">Password</ion-label> -->
-          <ion-input formControlName="password" placeholder="password" type="password" name="password"></ion-input>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-      <ion-row>
-        <ion-col size="6">
-          <!-- <ion-button type="link" routerLink="/signup" routerDirection="forward" color="primary" fill="clear"
-            expand="block">
-            Signup
-          </ion-button> -->
-        </ion-col>
-        <ion-col size="6">
-          <ion-button type="button" color="primary" fill="clear" expand="block">
-            Forgot Password?
-          </ion-button>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col size="12">
-          <ion-button (click)="onSubmit()" [disabled]="!form.valid" class="submit-button" type="submit" color="primary"
-            expand="block">
-            Login
-          </ion-button>
-        </ion-col>
-      </ion-row>
-      <ion-row style="margin: 25px 0;">
-        <ion-col size="12">
-          <div class="divider">
-            <span></span>
-            <label>OR</label>
-            <span></span>
-          </div>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col size="12" class="signup-row">
-            <span>New To DRP?</span>
-          <ion-button type="link" routerLink="/signup" routerDirection="forward" color="primary" fill="clear"
-            expand="block">
-            Signup
-          </ion-button>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
+    <app-header title="LOGIN"></app-header>
+    <ion-list>
+      <ion-item>
+        <ion-input formControlName="email" placeholder="E-Mail" type="email" name="email"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-input formControlName="password" placeholder="Password" type="password" name="password"></ion-input>
+      </ion-item>
+      <ion-item lines="none">
+        <ion-button slot="end" type="button" color="primary" fill="clear" expand="block">
+          Forgot Password?
+        </ion-button>
+      </ion-item>
+      <ion-button (click)="onSubmit()" [disabled]="!form.valid" type="submit" expand="block">
+        Login
+      </ion-button>
+    </ion-list>
   </form>
-
+  <ion-item lines="none" class="divider">
+    <span></span>
+    <label>OR</label>
+    <span></span>
+  </ion-item>
+  <ion-item lines="none">
+    <span>New To DRP?</span>
+    <ion-button slot="end" type="link" routerLink="/signup" routerDirection="forward" color="primary" fill="clear" expand="block">
+      Signup
+    </ion-button>
+  </ion-item>
 </ion-content>
