--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -81,21 +81,21 @@ body{
   --ion-color-light-tint: #f5f6f9;
 }
 
-// @media(prefers-color-scheme: light) {
-//   .ios body {
-//     --ion-background-color: #ffffff;
-//     --ion-background-color-rgb: 0,0,0;
+@media(prefers-color-scheme: light) {
+  .ios body {
+    // --ion-background-color: #ffffff;
+    // --ion-background-color-rgb: 0,0,0;
 
-//     --ion-text-color: #333333;
-//     --ion-text-color-rgb: 255,255,255;
+    // --ion-text-color: #333333;
+    // --ion-text-color-rgb: 255,255,255;
 
-//     --ion-color-step-50: rgb(240, 240, 240);
-//     --ion-color-step-100: rgb(240, 240, 240);
-//     --ion-color-step-150: rgb(220, 220, 220);
-//     --ion-color-step-200: rgb(210, 210, 210);
-//     --ion-color-step-250: rgb(200, 200, 200);
-//   }
-// }
+    // --ion-color-step-50: rgb(240, 240, 240);
+    // --ion-color-step-100: rgb(240, 240, 240);
+    // --ion-color-step-150: rgb(220, 220, 220);
+    --ion-color-step-200: rgb(210, 210, 210);
+    // --ion-color-step-250: rgb(200, 200, 200);
+  }
+}
 
 @media (prefers-color-scheme: dark) {
   /*
